--- a/go/items.html
+++ b/go/items.html
@@ -60745,6 +60745,224 @@ Mercenary Grade Keyless Case</TD>
 
 
 
+<TR bgColor=#ffffff>
+<TD align=center height=60 width=40 bgcolor=#90ff90>31018</TD>
+
+
+
+<TD align=center height=60 width=60><img width=60 height=60 src=http://media.steampowered.com/apps/440/icons/dec18_polar_pal.6be7670b2330d4c84fe76c71a123e2d9d90fb095.png></TD>
+<TD align=center height=60 width=400>Polar Pal</TD>
+<TD align=center height=60 width=300 bgcolor=#ff9090>tf_wearable</TD>
+<TD align=center height=60 width=300 bgcolor=#90ff90>마스코트</TD>
+<TD align=center height=60 width=300>models/workshop/player/items/all_class/dec18_polar_pal/dec18_polar_pal_Scout.mdl</TD>
+
+
+<TR bgColor=#ffffff>
+<TD align=center height=60 width=40 bgcolor=#90ff90>31019</TD>
+
+
+
+<TD align=center height=60 width=60><img width=60 height=60 src=http://media.steampowered.com/apps/440/icons/dec18_pocket_admin.b53b43cc475e02c09b33bae16f47f922c61063ca.png></TD>
+<TD align=center height=60 width=400>Pocket Admin</TD>
+<TD align=center height=60 width=300 bgcolor=#ff9090>tf_wearable</TD>
+<TD align=center height=60 width=300 bgcolor=#90ff90>호주머니 친구</TD>
+<TD align=center height=60 width=300>models/workshop/player/items/all_class/dec18_pocket_admin/dec18_pocket_admin_Scout.mdl</TD>
+
+
+<TR bgColor=#ffffff>
+<TD align=center height=60 width=40 bgcolor=#90ff90>31020</TD>
+
+
+
+<TD align=center height=60 width=60><img width=60 height=60 src=http://media.steampowered.com/apps/440/icons/dec18_bread_heads.884d1dae4c6cfd954ab7c7c29788027e76469096.png></TD>
+<TD align=center height=60 width=400>Bread Heads</TD>
+<TD align=center height=60 width=300 bgcolor=#ff9090>tf_wearable</TD>
+<TD align=center height=60 width=300 bgcolor=#90ff90>모자</TD>
+<TD align=center height=60 width=300>models/workshop/player/items/all_class/dec18_bread_heads/dec18_bread_heads_Scout.mdl</TD>
+
+
+<TR bgColor=#ffffff>
+<TD align=center height=60 width=40 bgcolor=#90ff90>31021</TD>
+
+
+
+<TD align=center height=60 width=60><img width=60 height=60 src=http://media.steampowered.com/apps/440/icons/dec18_catchers_companion.bf82bba32ddf9f1e77b105291b4b9fdbd883fe6a.png></TD>
+<TD align=center height=60 width=400>Catcher's Companion</TD>
+<TD align=center height=60 width=300 bgcolor=#ff9090>tf_wearable</TD>
+<TD align=center height=60 width=300 bgcolor=#90ff90>마스코트</TD>
+<TD align=center height=60 width=300>models/workshop/player/items/scout/dec18_catchers_companion/dec18_catchers_companion.mdl</TD>
+
+
+<TR bgColor=#ffffff>
+<TD align=center height=60 width=40 bgcolor=#90ff90>31022</TD>
+
+
+
+<TD align=center height=60 width=60><img width=60 height=60 src=http://media.steampowered.com/apps/440/icons/dec18_juveniles_jumper.e67463d998a9d3e3db741620788fe240723f8450.png></TD>
+<TD align=center height=60 width=400>Juvenile's Jumper</TD>
+<TD align=center height=60 width=300 bgcolor=#ff9090>tf_wearable</TD>
+<TD align=center height=60 width=300 bgcolor=#90ff90>스웨터</TD>
+<TD align=center height=60 width=300>models/workshop/player/items/scout/dec18_juveniles_jumper/dec18_juveniles_jumper.mdl</TD>
+
+
+<TR bgColor=#ffffff>
+<TD align=center height=60 width=40 bgcolor=#90ff90>31023</TD>
+
+
+
+<TD align=center height=60 width=60><img width=60 height=60 src=http://media.steampowered.com/apps/440/icons/dec18_millennial_mercenary.f3428a30b4bc6efc616f2683157e811b8b41800f.png></TD>
+<TD align=center height=60 width=400>Millennial Mercenary</TD>
+<TD align=center height=60 width=300 bgcolor=#ff9090>tf_wearable</TD>
+<TD align=center height=60 width=300 bgcolor=#90ff90>머리칼</TD>
+<TD align=center height=60 width=300>models/workshop/player/items/scout/dec18_millennial_mercenary/dec18_millennial_mercenary.mdl</TD>
+
+
+<TR bgColor=#ffffff>
+<TD align=center height=60 width=40 bgcolor=#90ff90>31024</TD>
+
+
+
+<TD align=center height=60 width=60><img width=60 height=60 src=http://media.steampowered.com/apps/440/icons/dec18_crack_pot.0a321dea0cf401c74b1496f618502bac10854708.png></TD>
+<TD align=center height=60 width=400>Crack Pot</TD>
+<TD align=center height=60 width=300 bgcolor=#ff9090>tf_wearable</TD>
+<TD align=center height=60 width=300 bgcolor=#90ff90>Flower Pot</TD>
+<TD align=center height=60 width=300>models/workshop/player/items/soldier/dec18_crack_pot/dec18_crack_pot.mdl</TD>
+
+
+<TR bgColor=#ffffff>
+<TD align=center height=60 width=40 bgcolor=#90ff90>31025</TD>
+
+
+
+<TD align=center height=60 width=60><img width=60 height=60 src=http://media.steampowered.com/apps/440/icons/dec18_climbing_commander.1edaa762a602480b27c9f83b69049943650662b7.png></TD>
+<TD align=center height=60 width=400>Climbing Commander</TD>
+<TD align=center height=60 width=300 bgcolor=#ff9090>tf_wearable</TD>
+<TD align=center height=60 width=300 bgcolor=#90ff90>Hood</TD>
+<TD align=center height=60 width=300>models/workshop/player/items/soldier/dec18_climbing_commander/dec18_climbing_commander.mdl</TD>
+
+
+<TR bgColor=#ffffff>
+<TD align=center height=60 width=40 bgcolor=#90ff90>31026</TD>
+
+
+
+<TD align=center height=60 width=60><img width=60 height=60 src=http://media.steampowered.com/apps/440/icons/dec18_pocket_pardner.ce5831aa79e0823a0d2ad6ff76564e871395e71e.png></TD>
+<TD align=center height=60 width=400>Pocket Pardner</TD>
+<TD align=center height=60 width=300 bgcolor=#ff9090>tf_wearable</TD>
+<TD align=center height=60 width=300 bgcolor=#90ff90>호주머니 친구</TD>
+<TD align=center height=60 width=300>models/workshop/player/items/pyro/dec18_pocket_pardner/dec18_pocket_pardner.mdl</TD>
+
+
+<TR bgColor=#ffffff>
+<TD align=center height=60 width=40 bgcolor=#90ff90>31027</TD>
+
+
+
+<TD align=center height=60 width=60><img width=60 height=60 src=http://media.steampowered.com/apps/440/icons/dec18_misers_muttonchops.034921927515305c6b11564598d26d7a49c786d8.png></TD>
+<TD align=center height=60 width=400>Miser's Muttonchops</TD>
+<TD align=center height=60 width=300 bgcolor=#ff9090>tf_wearable</TD>
+<TD align=center height=60 width=300 bgcolor=#90ff90>수염</TD>
+<TD align=center height=60 width=300>models/workshop/player/items/medic/dec18_misers_muttonchops/dec18_misers_muttonchops.mdl</TD>
+
+
+<TR bgColor=#ffffff>
+<TD align=center height=60 width=40 bgcolor=#90ff90>31028</TD>
+
+
+
+<TD align=center height=60 width=60><img width=60 height=60 src=http://media.steampowered.com/apps/440/icons/dec18_snowcapped.7a277a5b538f99334cd8cdd0e8243362131e9747.png></TD>
+<TD align=center height=60 width=400>Snowcapped</TD>
+<TD align=center height=60 width=300 bgcolor=#ff9090>tf_wearable</TD>
+<TD align=center height=60 width=300 bgcolor=#90ff90>모자</TD>
+<TD align=center height=60 width=300>models/workshop/player/items/medic/dec18_snowcapped/dec18_snowcapped.mdl</TD>
+
+
+<TR bgColor=#ffffff>
+<TD align=center height=60 width=40 bgcolor=#90ff90>31029</TD>
+
+
+
+<TD align=center height=60 width=60><img width=60 height=60 src=http://media.steampowered.com/apps/440/icons/dec18_cool_capuchon.7d498fcf64311bb19814388b0b1de1726035f0a7.png></TD>
+<TD align=center height=60 width=400>Cool Capuchon</TD>
+<TD align=center height=60 width=300 bgcolor=#ff9090>tf_wearable</TD>
+<TD align=center height=60 width=300 bgcolor=#90ff90>Hood</TD>
+<TD align=center height=60 width=300>models/workshop/player/items/heavy/dec18_cool_capuchon/dec18_cool_capuchon.mdl</TD>
+
+
+<TR bgColor=#ffffff>
+<TD align=center height=60 width=40 bgcolor=#90ff90>31030</TD>
+
+
+
+<TD align=center height=60 width=60><img width=60 height=60 src=http://media.steampowered.com/apps/440/icons/dec18_paka_parka.2edad2835281ead806a004f35dfd37be8f0acd6b.png></TD>
+<TD align=center height=60 width=400>Paka Parka</TD>
+<TD align=center height=60 width=300 bgcolor=#ff9090>tf_wearable</TD>
+<TD align=center height=60 width=300 bgcolor=#90ff90>외투</TD>
+<TD align=center height=60 width=300>models/workshop/player/items/heavy/dec18_paka_parka/dec18_paka_parka.mdl</TD>
+
+
+<TR bgColor=#ffffff>
+<TD align=center height=60 width=40 bgcolor=#90ff90>31031</TD>
+
+
+
+<TD align=center height=60 width=60><img width=60 height=60 src=http://media.steampowered.com/apps/440/icons/dec18_wise_whiskers.354e486198b89515f07d4fe3bec16ed73c70392b.png></TD>
+<TD align=center height=60 width=400>Wise Whiskers</TD>
+<TD align=center height=60 width=300 bgcolor=#ff9090>tf_wearable</TD>
+<TD align=center height=60 width=300 bgcolor=#90ff90>수염</TD>
+<TD align=center height=60 width=300>models/workshop/player/items/engineer/dec18_wise_whiskers/dec18_wise_whiskers.mdl</TD>
+
+
+<TR bgColor=#ffffff>
+<TD align=center height=60 width=40 bgcolor=#90ff90>31032</TD>
+
+
+
+<TD align=center height=60 width=60><img width=60 height=60 src=http://media.steampowered.com/apps/440/icons/dec18_puggyback.d195dd83d2411a72cdaca1f63001688aab80245c.png></TD>
+<TD align=center height=60 width=400>Puggyback</TD>
+<TD align=center height=60 width=300 bgcolor=#ff9090>tf_wearable</TD>
+<TD align=center height=60 width=300 bgcolor=#90ff90>마스코트</TD>
+<TD align=center height=60 width=300>models/workshop/player/items/engineer/dec18_puggyback/dec18_puggyback.mdl</TD>
+
+
+<TR bgColor=#ffffff>
+<TD align=center height=60 width=40 bgcolor=#90ff90>31033</TD>
+
+
+
+<TD align=center height=60 width=60><img width=60 height=60 src=http://media.steampowered.com/apps/440/icons/dec18_harry.953f0b701f6d553eef39ceebea3fd0c5244e7fc8.png></TD>
+<TD align=center height=60 width=400>Harry</TD>
+<TD align=center height=60 width=300 bgcolor=#ff9090>tf_wearable</TD>
+<TD align=center height=60 width=300 bgcolor=#90ff90>마스코트</TD>
+<TD align=center height=60 width=300>models/workshop/player/items/all_class/dec18_harry/dec18_harry_medic.mdl</TD>
+
+
+<TR bgColor=#ffffff>
+<TD align=center height=60 width=40 bgcolor=#90ff90>31034</TD>
+
+
+
+<TD align=center height=60 width=60><img width=60 height=60 src=http://media.steampowered.com/apps/440/icons/dec18_mighty_mitre.6c864d14f9da013d273d8c0e946dab0a6a9f0d54.png></TD>
+<TD align=center height=60 width=400>Mighty Mitre</TD>
+<TD align=center height=60 width=300 bgcolor=#ff9090>tf_wearable</TD>
+<TD align=center height=60 width=300 bgcolor=#90ff90>모자</TD>
+<TD align=center height=60 width=300>models/workshop/player/items/medic/dec18_mighty_mitre/dec18_mighty_mitre.mdl</TD>
+
+
+<TR bgColor=#ffffff>
+<TD align=center height=60 width=40 bgcolor=#90ff90>31035</TD>
+
+
+
+<TD align=center height=60 width=60><img width=60 height=60 src=http://media.steampowered.com/apps/440/icons/dec18_dumb_bell.0631495eabe7970f78bba4b38f91057707f2e677.png></TD>
+<TD align=center height=60 width=400>Dumb Bell</TD>
+<TD align=center height=60 width=300 bgcolor=#ff9090>tf_wearable</TD>
+<TD align=center height=60 width=300 bgcolor=#90ff90>Bell</TD>
+<TD align=center height=60 width=300>models/workshop/player/items/soldier/dec18_dumb_bell/dec18_dumb_bell.mdl</TD>
+
+
+
+
 
 
 </TR>
