--- a/go/medal.html
+++ b/go/medal.html
@@ -213,6 +213,234 @@
 <TD align=center height=60 width=300 bgcolor=#90ff90>대회 훈장</TD>
 <TD align=center height=60 width=300>models/player/items/all_class/ugc_highlander_iron.mdl</TD>
 
+
+<TR bgColor=#ffffff>
+<TD align=center height=60 width=40 bgcolor=#90ff90>680</TD>
+
+
+
+<TD align=center height=60 width=60><img width=60 height=60 src=http://media.steampowered.com/apps/440/icons/ugc_trophy_medal_platinum.2760369ad87736c2979cc2a20312472868119ba5.png></TD>
+<TD align=center height=60 width=400>UGC 하이랜더 플래티넘전 1위 (2011년 가을)</TD>
+<TD align=center height=60 width=300 bgcolor=#ff9090>tf_wearable</TD>
+<TD align=center height=60 width=300 bgcolor=#90ff90>대회 훈장</TD>
+<TD align=center height=60 width=300>models/player/items/all_class/ugc_trophy_medal.mdl</TD>
+
+
+<TR bgColor=#ffffff>
+<TD align=center height=60 width=40 bgcolor=#90ff90>681</TD>
+
+
+
+<TD align=center height=60 width=60><img width=60 height=60 src=http://media.steampowered.com/apps/440/icons/ugc_trophy_medal_platinum.2760369ad87736c2979cc2a20312472868119ba5.png></TD>
+<TD align=center height=60 width=400>UGC 하이랜더 플래티넘전 2위 (2011년 가을)</TD>
+<TD align=center height=60 width=300 bgcolor=#ff9090>tf_wearable</TD>
+<TD align=center height=60 width=300 bgcolor=#90ff90>대회 훈장</TD>
+<TD align=center height=60 width=300>models/player/items/all_class/ugc_trophy_medal.mdl</TD>
+
+
+<TR bgColor=#ffffff>
+<TD align=center height=60 width=40 bgcolor=#90ff90>682</TD>
+
+
+
+<TD align=center height=60 width=60><img width=60 height=60 src=http://media.steampowered.com/apps/440/icons/ugc_trophy_medal_platinum.2760369ad87736c2979cc2a20312472868119ba5.png></TD>
+<TD align=center height=60 width=400>UGC 하이랜더 플래티넘전 3위 (2011년 가을)</TD>
+<TD align=center height=60 width=300 bgcolor=#ff9090>tf_wearable</TD>
+<TD align=center height=60 width=300 bgcolor=#90ff90>대회 훈장</TD>
+<TD align=center height=60 width=300>models/player/items/all_class/ugc_trophy_medal.mdl</TD>
+
+
+<TR bgColor=#ffffff>
+<TD align=center height=60 width=40 bgcolor=#90ff90>683</TD>
+
+
+
+<TD align=center height=60 width=60><img width=60 height=60 src=http://media.steampowered.com/apps/440/icons/ugc_trophy_medal_platinum.2760369ad87736c2979cc2a20312472868119ba5.png></TD>
+<TD align=center height=60 width=400>UGC 하이랜더 플래티넘전 참가자 (2011년 가을)</TD>
+<TD align=center height=60 width=300 bgcolor=#ff9090>tf_wearable</TD>
+<TD align=center height=60 width=300 bgcolor=#90ff90>대회 훈장</TD>
+<TD align=center height=60 width=300>models/player/items/all_class/ugc_trophy_medal.mdl</TD>
+
+
+<TR bgColor=#ffffff>
+<TD align=center height=60 width=40 bgcolor=#90ff90>684</TD>
+
+
+
+<TD align=center height=60 width=60><img width=60 height=60 src=http://media.steampowered.com/apps/440/icons/ugc_trophy_medal_platinum.2760369ad87736c2979cc2a20312472868119ba5.png></TD>
+<TD align=center height=60 width=400>UGC 하이랜더 유럽권 플래티넘전 (2011년 가을)</TD>
+<TD align=center height=60 width=300 bgcolor=#ff9090>tf_wearable</TD>
+<TD align=center height=60 width=300 bgcolor=#90ff90>대회 훈장</TD>
+<TD align=center height=60 width=300>models/player/items/all_class/ugc_trophy_medal.mdl</TD>
+
+
+<TR bgColor=#ffffff>
+<TD align=center height=60 width=40 bgcolor=#90ff90>685</TD>
+
+
+
+<TD align=center height=60 width=60><img width=60 height=60 src=http://media.steampowered.com/apps/440/icons/ugc_trophy_medal_silver.5c3210073d9adf4bd4061d0d6344cb0fa24adb3b.png></TD>
+<TD align=center height=60 width=400>UGC 하이랜더 실버전 1위 (2011년 가을)</TD>
+<TD align=center height=60 width=300 bgcolor=#ff9090>tf_wearable</TD>
+<TD align=center height=60 width=300 bgcolor=#90ff90>대회 훈장</TD>
+<TD align=center height=60 width=300>models/player/items/all_class/ugc_trophy_medal.mdl</TD>
+
+
+<TR bgColor=#ffffff>
+<TD align=center height=60 width=40 bgcolor=#90ff90>686</TD>
+
+
+
+<TD align=center height=60 width=60><img width=60 height=60 src=http://media.steampowered.com/apps/440/icons/ugc_trophy_medal_silver.5c3210073d9adf4bd4061d0d6344cb0fa24adb3b.png></TD>
+<TD align=center height=60 width=400>UGC 하이랜더 실버전 2위 (2011년 가을)</TD>
+<TD align=center height=60 width=300 bgcolor=#ff9090>tf_wearable</TD>
+<TD align=center height=60 width=300 bgcolor=#90ff90>대회 훈장</TD>
+<TD align=center height=60 width=300>models/player/items/all_class/ugc_trophy_medal.mdl</TD>
+
+
+<TR bgColor=#ffffff>
+<TD align=center height=60 width=40 bgcolor=#90ff90>687</TD>
+
+
+
+<TD align=center height=60 width=60><img width=60 height=60 src=http://media.steampowered.com/apps/440/icons/ugc_trophy_medal_silver.5c3210073d9adf4bd4061d0d6344cb0fa24adb3b.png></TD>
+<TD align=center height=60 width=400>UGC 하이랜더 실버전 3위 (2011년 가을)</TD>
+<TD align=center height=60 width=300 bgcolor=#ff9090>tf_wearable</TD>
+<TD align=center height=60 width=300 bgcolor=#90ff90>대회 훈장</TD>
+<TD align=center height=60 width=300>models/player/items/all_class/ugc_trophy_medal.mdl</TD>
+
+
+<TR bgColor=#ffffff>
+<TD align=center height=60 width=40 bgcolor=#90ff90>688</TD>
+
+
+
+<TD align=center height=60 width=60><img width=60 height=60 src=http://media.steampowered.com/apps/440/icons/ugc_trophy_medal_silver.5c3210073d9adf4bd4061d0d6344cb0fa24adb3b.png></TD>
+<TD align=center height=60 width=400>UGC 하이랜더 실버전 참가자 (2011년 가을)</TD>
+<TD align=center height=60 width=300 bgcolor=#ff9090>tf_wearable</TD>
+<TD align=center height=60 width=300 bgcolor=#90ff90>대회 훈장</TD>
+<TD align=center height=60 width=300>models/player/items/all_class/ugc_trophy_medal.mdl</TD>
+
+
+<TR bgColor=#ffffff>
+<TD align=center height=60 width=40 bgcolor=#90ff90>689</TD>
+
+
+
+<TD align=center height=60 width=60><img width=60 height=60 src=http://media.steampowered.com/apps/440/icons/ugc_trophy_medal_silver.5c3210073d9adf4bd4061d0d6344cb0fa24adb3b.png></TD>
+<TD align=center height=60 width=400>UGC 하이랜더 유럽권 실버전 (2011년 가을)</TD>
+<TD align=center height=60 width=300 bgcolor=#ff9090>tf_wearable</TD>
+<TD align=center height=60 width=300 bgcolor=#90ff90>대회 훈장</TD>
+<TD align=center height=60 width=300>models/player/items/all_class/ugc_trophy_medal.mdl</TD>
+
+
+<TR bgColor=#ffffff>
+<TD align=center height=60 width=40 bgcolor=#90ff90>690</TD>
+
+
+
+<TD align=center height=60 width=60><img width=60 height=60 src=http://media.steampowered.com/apps/440/icons/ugc_trophy_medal_participant.2c402468611ab851302f286c0d72113ec83aa527.png></TD>
+<TD align=center height=60 width=400>UGC 하이랜더 아이언전 2위 (2011년 가을)</TD>
+<TD align=center height=60 width=300 bgcolor=#ff9090>tf_wearable</TD>
+<TD align=center height=60 width=300 bgcolor=#90ff90>대회 훈장</TD>
+<TD align=center height=60 width=300>models/player/items/all_class/ugc_trophy_medal.mdl</TD>
+
+
+<TR bgColor=#ffffff>
+<TD align=center height=60 width=40 bgcolor=#90ff90>691</TD>
+
+
+
+<TD align=center height=60 width=60><img width=60 height=60 src=http://media.steampowered.com/apps/440/icons/ugc_trophy_medal_participant.2c402468611ab851302f286c0d72113ec83aa527.png></TD>
+<TD align=center height=60 width=400>UGC 하이랜더 아이언전 1위 (2011년 가을)</TD>
+<TD align=center height=60 width=300 bgcolor=#ff9090>tf_wearable</TD>
+<TD align=center height=60 width=300 bgcolor=#90ff90>대회 훈장</TD>
+<TD align=center height=60 width=300>models/player/items/all_class/ugc_trophy_medal.mdl</TD>
+
+
+<TR bgColor=#ffffff>
+<TD align=center height=60 width=40 bgcolor=#90ff90>692</TD>
+
+
+
+<TD align=center height=60 width=60><img width=60 height=60 src=http://media.steampowered.com/apps/440/icons/ugc_trophy_medal_participant.2c402468611ab851302f286c0d72113ec83aa527.png></TD>
+<TD align=center height=60 width=400>UGC 하이랜더 아이언전 3위 (2011년 가을)</TD>
+<TD align=center height=60 width=300 bgcolor=#ff9090>tf_wearable</TD>
+<TD align=center height=60 width=300 bgcolor=#90ff90>대회 훈장</TD>
+<TD align=center height=60 width=300>models/player/items/all_class/ugc_trophy_medal.mdl</TD>
+
+
+<TR bgColor=#ffffff>
+<TD align=center height=60 width=40 bgcolor=#90ff90>693</TD>
+
+
+
+<TD align=center height=60 width=60><img width=60 height=60 src=http://media.steampowered.com/apps/440/icons/ugc_trophy_medal_participant.2c402468611ab851302f286c0d72113ec83aa527.png></TD>
+<TD align=center height=60 width=400>UGC 하이랜더 유럽권 아이언전 (2011년 가을)</TD>
+<TD align=center height=60 width=300 bgcolor=#ff9090>tf_wearable</TD>
+<TD align=center height=60 width=300 bgcolor=#90ff90>대회 훈장</TD>
+<TD align=center height=60 width=300>models/player/items/all_class/ugc_trophy_medal.mdl</TD>
+
+
+<TR bgColor=#ffffff>
+<TD align=center height=60 width=40 bgcolor=#90ff90>694</TD>
+
+
+
+<TD align=center height=60 width=60><img width=60 height=60 src=http://media.steampowered.com/apps/440/icons/ugc_trophy_medal_participant.2c402468611ab851302f286c0d72113ec83aa527.png></TD>
+<TD align=center height=60 width=400>UGC 하이랜더 틴전 1위 (2011년 가을)</TD>
+<TD align=center height=60 width=300 bgcolor=#ff9090>tf_wearable</TD>
+<TD align=center height=60 width=300 bgcolor=#90ff90>대회 훈장</TD>
+<TD align=center height=60 width=300>models/player/items/all_class/ugc_trophy_medal.mdl</TD>
+
+
+<TR bgColor=#ffffff>
+<TD align=center height=60 width=40 bgcolor=#90ff90>695</TD>
+
+
+
+<TD align=center height=60 width=60><img width=60 height=60 src=http://media.steampowered.com/apps/440/icons/ugc_trophy_medal_participant.2c402468611ab851302f286c0d72113ec83aa527.png></TD>
+<TD align=center height=60 width=400>UGC 하이랜더 틴전 2위 (2011년 가을)</TD>
+<TD align=center height=60 width=300 bgcolor=#ff9090>tf_wearable</TD>
+<TD align=center height=60 width=300 bgcolor=#90ff90>대회 훈장</TD>
+<TD align=center height=60 width=300>models/player/items/all_class/ugc_trophy_medal.mdl</TD>
+
+
+<TR bgColor=#ffffff>
+<TD align=center height=60 width=40 bgcolor=#90ff90>696</TD>
+
+
+
+<TD align=center height=60 width=60><img width=60 height=60 src=http://media.steampowered.com/apps/440/icons/ugc_trophy_medal_participant.2c402468611ab851302f286c0d72113ec83aa527.png></TD>
+<TD align=center height=60 width=400>UGC 하이랜더 틴전 3위 (2011년 가을)</TD>
+<TD align=center height=60 width=300 bgcolor=#ff9090>tf_wearable</TD>
+<TD align=center height=60 width=300 bgcolor=#90ff90>대회 훈장</TD>
+<TD align=center height=60 width=300>models/player/items/all_class/ugc_trophy_medal.mdl</TD>
+
+
+<TR bgColor=#ffffff>
+<TD align=center height=60 width=40 bgcolor=#90ff90>697</TD>
+
+
+
+<TD align=center height=60 width=60><img width=60 height=60 src=http://media.steampowered.com/apps/440/icons/ugc_trophy_medal_participant.2c402468611ab851302f286c0d72113ec83aa527.png></TD>
+<TD align=center height=60 width=400>UGC 하이랜더 참가상 (2011년 가을)</TD>
+<TD align=center height=60 width=300 bgcolor=#ff9090>tf_wearable</TD>
+<TD align=center height=60 width=300 bgcolor=#90ff90>대회 훈장</TD>
+<TD align=center height=60 width=300>models/player/items/all_class/ugc_trophy_medal.mdl</TD>
+
+
+<TR bgColor=#ffffff>
+<TD align=center height=60 width=40 bgcolor=#90ff90>698</TD>
+
+
+
+<TD align=center height=60 width=60><img width=60 height=60 src=http://media.steampowered.com/apps/440/icons/ugc_trophy_medal_participant.2c402468611ab851302f286c0d72113ec83aa527.png></TD>
+<TD align=center height=60 width=400>UGC 하이랜더 유럽권 참가상 (2011년 가을)</TD>
+<TD align=center height=60 width=300 bgcolor=#ff9090>tf_wearable</TD>
+<TD align=center height=60 width=300 bgcolor=#90ff90>대회 훈장</TD>
+<TD align=center height=60 width=300>models/player/items/all_class/ugc_trophy_medal.mdl</TD>
+
 <TR bgColor=#ffffff>
 <TD align=center height=60 width=40 bgcolor=#90ff90>8000</TD>
 
